--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
   },
-  "files.eol": "\n",
+  "eslint.enable": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -14,7 +14,9 @@
     "typescriptreact",
     "json"
   ],
-  "eslint.run": "onSave",
+  "eslint.run": "onType",
+  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "files.eol": "\n",
   "files.exclude": {
     "**/coverage": false,
     "**/node_modules": true
