--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@features/*": [
         "./src/features/*"
+      ],
+      "@shared/*": [
+        "./src/shared/*"
       ]
     }
   },
