--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
   "files.exclude": {
     "**/coverage": false,
     "**/node_modules": true
-  }
+  },
+  "explorer.sortOrder": "foldersNestsFiles"
 }
